--- a/css/main.css
+++ b/css/main.css
@@ -6,4 +6,37 @@
 .header{
     background-color: #232f3e;
     border-radius: 5px 5px 0 0;
+    color: #fff;
+}
+    .header a{
+        color: #bcbdc7;
+        transition: all 0.3s linear;
+    }
+
+.topinfo{
+    border-bottom: 1px solid #303e4f;
+    display: flex;
+    justify-content: space-between;
+    
+}
+.accountlist{
+    display: flex;  
+}
+.fa-icon{
+    width: 20px;
+   vertical-align: middle;
+}
+.accountlist-link{
+    padding: 5px 12px;
+    display: block;
+   
+}
+.accountlist-link>i{
+    padding-left: 4px;
+}
+.accountlist-link:hover{
+    color: #fff;
+}
+.language{
+    padding: 5px 0 0 10px;
 }
