--- a/css/normalize.css
+++ b/css/normalize.css
@@ -11,11 +11,13 @@ html {
 body {
     box-sizing: border-box;
     margin: 0;
+    font-family: IRANSans;
 }
 
 ul {
     padding: 0;
     margin: 0;
+    list-style: none;
 }
 
 a {
