--- a/css/main.css
+++ b/css/main.css
@@ -40,11 +40,31 @@
 .language{
     padding: 5px 0 0 10px;
 }
- 
+.info{
+    font-size: 0.9em;
+}
+ .logo{
+     display: flex;
+     margin-right: 10px;
+ }
+ .cart1{
+    background-color: #f4a137;
+    padding: 8px 8px;
+    font-size: 2em;
+    border-radius: 50%;
+}
+ .myshop{
+     font-size: 1.7em;
+ }
 .headerinfo{
     display: flex;
-    padding: 20px;
+    padding: 2px;
+    border-bottom:1px solid #303e4f;
+    margin-top: 13px;
   
+}
+.info{
+    padding-right: 10px;
 }
 .searchbox{
     
@@ -61,6 +81,7 @@
 .search-input{
     border: none;
     padding: 8px 15px;
+    width: 251px;
   
   
 }
@@ -70,6 +91,19 @@
   color: #fff !important;
     background-color: #f4a137;
     border-radius: 20px 0 0 20px;
+}
+.contactus{
+    font-size: 0.9em;
+    display: flex;
+    margin: 0 0.8em;
+}
+.contactusicon{
+ 
+    font-size: 2.5em;
+    padding: 0 0.4em;
+}
+.carticon{
+    background-color: #f4a137;
 
-   
+    
 }
